fixed :lipstick: dark mode for navbar n improved :recycle: code for same

--- a/src/components/Main/Navbar.module.css
+++ b/src/components/Main/Navbar.module.css
@@ -12,19 +12,23 @@
     border-bottom-right-radius: 20px;
 }
 
-.navbar .menu ul{
+.navbar-dark{
+    background-color: #2a2d2f75;
+}
+
+ul{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
 }
 
-.navbar .menu li{
+li{
     padding: 10px;
     list-style-type: none;
 }
 
-.navbar .menu button{
+.nav-btn{
     cursor: pointer;
     background: none;
     padding: 10px;
@@ -36,14 +40,28 @@
     font-family: 'JetBrains Mono', monospace;
 }
 
-.navbar .menu .selected{
+.nav-btn-dark{
+    color: #ffffffde;
+}
+
+.selected{
     color: white;
     background-color: #bdbdbd97;
 }
 
-.navbar .menu button:hover{
+.selected-dark{
+    color: #ffffffde;
+    background-color: #6c6c6c97;
+}
+
+.nav-btn:hover{
     color: white;
     background-color: #bdbdbd97;
+}
+
+.nav-btn-dark:hover{
+    color: #ffffffde;
+    background-color: #6c6c6c97;
 }
 
 .link{
@@ -59,22 +77,37 @@
 
 .link:visited{
     color: white;
+    background-color: transparent;
 }
 
-.navbar .theme-btn{
+.link-dark{
+    color: #ffffffde;
+}
+
+.link-dark:hover{
+    color: #ffffffde;
+    background-color: transparent;
+}
+
+.link-dark:visited{
+    color: #ffffffde;
+    background-color: transparent;
+}
+
+.theme-btn{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
 }
 
-.navbar .theme-btn button{
+.theme-btn button{
     cursor: pointer;
     background: transparent;
     border: none;
 }
 
-.navbar .theme-btn img{
+.theme-btn img{
     height: 40px;
     width: 40px;
 }
